--- a/styles/home.css
+++ b/styles/home.css
@@ -15,8 +15,9 @@ header {
 
 #bg {
     grid-area: left;
-
     background: url('/assets/ilustracao.svg') no-repeat top/contain;
+    background-position-x: -10rem;
+
 }
 
 main {
@@ -24,18 +25,19 @@ main {
 
     display: flex;
     align-items: center;
-
 }
 
 main .container {
-    width: min(36.3rem, 100%);
+    width: min(36.3rem);
 }
 
 main h2 {
-    font-family: 'Poppins' sans-serif;
+    font-family: 'Poppins', sans-serif;
     color: var(--black);
     font-size: clamp(20px, 5vw, 2.8rem);
     margin-bottom: 2.4rem;
+
+    font-weight: 700;
 }
 
 input {
@@ -46,4 +48,55 @@ input {
 input, button, .button {
     width: 100%;
     margin-bottom: 1.8rem;
+}
+
+.button {
+    background-color: var(--white);
+    border: 0.2rem solid var(--blue);
+
+    color: var(--blue);
+}
+
+.separator {
+    display: flex;
+    align-items: center;
+
+    margin: 4rem 0;
+}
+
+.separator div:nth-child(2) {
+    color: var(--grey-blue);
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
+    padding: 0 1.35rem;
+    line-height: 0;
+}
+
+.separator div:nth-child(1),
+.separator div:nth-child(3) {
+    background: var(--grey-blue);
+    width: 100%;
+    height: 1px;  
+}
+
+.ball {
+    width: 21.2rem;
+    height: 21.2rem;
+    background: var(--blue);
+    clip-path: circle();
+
+    opacity: 0.1;
+    position: fixed;
+}
+
+.ball.top {
+    top: -46rem;
+    right: -35rem;
+    width: 63.3rem;
+    height: 63.3rem;
+}
+
+.ball.bottom {
+    bottom: -15rem;
+    right: 5.6rem;
 }
