--- a/styles/global.css
+++ b/styles/global.css
@@ -20,6 +20,7 @@ html {
     --grey-dark: #4D5E77;
     --grey-blue: #A1B2CD;
     --grey-light: #E5EAF1;
+    --grey-medium: #eaecf2;
 
     /* 1rem = 16px ; (User Agent) = 100% */
     font-size: 62.5%; /* 10px */
@@ -92,6 +93,18 @@ button.outlined,
     background: var(--white);
     color: var(--blue);
     border: 0.2rem solid var(--blue);
+}
+
+button.red,
+.button.red {
+    background: var(--red);
+    color: var(--white);
+}
+
+button.grey,
+.button.grey {
+    background: var(--grey-light);
+    color: var(--grey-dark);
 }
 
 .content header {
