--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Criar sala - Rocket.Q</title>
 
-    <link rel="stylesheet" href="styles/global.css">
-    <link rel="stylesheet" href="styles/home.css">
+    <link rel="stylesheet" href="/styles/global.css">
+    <link rel="stylesheet" href="/styles/home.css">
 
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,7 +22,9 @@
 <body>
     <div id="home" class="content">
         <header>
-            <img src="./assets/Logo.svg" alt="">
+            <a href="/">
+                <img src="images/Logo.svg" alt="Logo">
+            </a>
         </header>
 
         <div id="bg">
@@ -32,17 +34,7 @@
 
         <main>
             <div class="container">
-                <section>
-                    <h2>Crie sua propria sala</h2>
-                    <form action="">
-                        <label class="sr-only" for="room-pass">Insira uma senha</label>
-                        <input type="password" id="room-pass" placeholder="Insira uma senha">
-                        <button>
-                            <img src="./assets/users-white.svg" alt="Entrar na sala">
-                            Criar sala
-                        </button>
-                    </form>
-                </section>
+                <%- include(`parts/${page}`) %>
             </div>
         </main>
     </div>
