--- a/src/views/room.ejs
+++ b/src/views/room.ejs
@@ -7,9 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rocket.Q - Perguntas e Respostas</title>
 
-    <link rel="stylesheet" href="styles/global.css">
-    <link rel="stylesheet" href="styles/room.css">
-    <link rel="stylesheet" href="styles/modal.css">
+    <link rel="stylesheet" href="/styles/global.css">
+    <link rel="stylesheet" href="/styles/room.css">
+    <link rel="stylesheet" href="/styles/modal.css">
+
+    <script src="/scripts/main.js" defer type="module"></script>
 
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,17 +25,17 @@
 <body>
     <div id="room" class="content">
         <header>
-            <a href="#">
-                <img src="./assets/Logo.svg" alt="Rocket.Q Logo">
+            <a href="/">
+                <img src="/images/Logo.svg" alt="Rocket.Q Logo">
             </a>
 
             <div class="buttons">
-                <div class="button outlined">
+                <div class="button outlined" id="room-id" data-id="323243">
                     #323243
-                    <img src="assets/copy.svg" alt="Copiar número da sala" />
+                    <img src="/images/copy.svg" alt="Copiar número da sala" />
                 </div>
                 <a href="#" class="button">
-                    <img src="assets/users-white.svg" alt="Criar uma sala">
+                    <img src="/images/users-white.svg" alt="Criar uma sala">
                     Criar Sala
                 </a>
             </div>
@@ -48,7 +50,7 @@
 
                     <footer>
                         <div>
-                            <img src="assets/lock-black.svg" alt="cadeado">
+                            <img src="/images/lock-black.svg" alt="cadeado">
                             Esta pergunta é anônima
                         </div>
                         <button>Enviar</button>
@@ -64,19 +66,19 @@
                     <div class="question-wrapper">
                         <div class="question-content">
                             <div class="user">
-                                <img src="assets/user.svg" alt="user">
+                                <img src="/images/user.svg" alt="user">
                             </div>
                             <div class="question">
                                 <p>Qual a diferença entre const, var e let no javascript</p>
                             </div>
                         </div>
                         <div class="actions">
-                            <a href="#" class="check">
-                                <img src="assets/check.svg" alt="Marcar como lida">
+                            <a href="#" class="check" data-id="2">
+                                <img src="/images/check.svg" alt="Marcar como lida">
                                 Marcar como lida
                             </a>
-                            <a href="#" class="delete">
-                                <img src="assets/trash.svg" alt="Excluir">
+                            <a href="#" class="delete" data-id="2">
+                                <img src="/images/trash.svg" alt="Excluir">
                                 Excluir
                             </a>
                         </div>
@@ -85,19 +87,19 @@
                     <div class="question-wrapper">
                         <div class="question-content">
                             <div class="user">
-                                <img src="assets/user.svg" alt="user">
+                                <img src="/images/user.svg" alt="user">
                             </div>
                             <div class="question">
                                 <p>O que é javascript</p>
                             </div>
                         </div>
                         <div class="actions">
-                            <a href="#" class="check">
-                                <img src="assets/check.svg" alt="Marcar como lida">
+                            <a href="#" class="check" data-id="3">
+                                <img src="/images/check.svg" alt="Marcar como lida">
                                 Marcar como lida
                             </a>
-                            <a href="#" class="delete">
-                                <img src="assets/trash.svg" alt="Excluir">
+                            <a href="#" class="delete" data-id="3">
+                                <img src="/images/trash.svg" alt="Excluir">
                                 Excluir
                             </a>
                         </div>
@@ -106,7 +108,7 @@
                     <div class="question-wrapper">
                         <div class="question-content">
                             <div class="user">
-                                <img src="assets/user.svg" alt="user">
+                                <img src="/images/user.svg" alt="user">
                             </div>
                             <div class="question">
                                 <p>Você já sabe quais as bases você precisa precisa melhorar para alcançar o seu próximo
@@ -116,12 +118,12 @@
                             </div>
                         </div>
                         <div class="actions">
-                            <a href="#" class="check">
-                                <img src="assets/check.svg" alt="Marcar como lida">
+                            <a href="#" class="check" data-id="4">
+                                <img src="/images/check.svg" alt="Marcar como lida">
                                 Marcar como lida
                             </a>
-                            <a href="#" class="delete">
-                                <img src="assets/trash.svg" alt="Excluir">
+                            <a href="#" class="delete" data-id="4">
+                                <img src="/images/trash.svg" alt="Excluir">
                                 Excluir
                             </a>
                         </div>
@@ -130,15 +132,15 @@
                     <div class="question-wrapper read">
                         <div class="question-content">
                             <div class="user">
-                                <img src="assets/user.svg" alt="user">
+                                <img src="/images/user.svg" alt="user">
                             </div>
                             <div class="question">
                                 <p>O que é typescript</p>
                             </div>
                         </div>
                         <div class="actions">
-                            <a href="#" class="delete">
-                                <img src="assets/trash.svg" alt="Excluir">
+                            <a href="#" class="delete" data-id="1">
+                                <img src="/images/trash.svg" alt="Excluir">
                                 Excluir
                             </a>
                         </div>
@@ -159,12 +161,12 @@
             <h2>Excluir pergunta</h2>
             <p>Tem certeza que você deseja excluir essa pergunta?</p>
 
-            <form action="#">
+            <form action="#" method="POST">
                 <label for="password" class="sr-only">Digite sua senha Admin</label>
                 <input type="password" id="password" name="password" placeholder="Digite sua senha">
 
                 <div class="buttons">
-                    <div class="button grey">Cancelar</div>
+                    <div class="button grey cancel">Cancelar</div>
                     <button class="red">Sim, excluir</button>
                 </div>
             </form>
